--- a/app/src/main/res/layout/layout_info_detail.xml
+++ b/app/src/main/res/layout/layout_info_detail.xml
@@ -43,7 +43,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_category" />
+            app:layout_constraintTop_toTopOf="@+id/tv_category_info" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_label_sub_category"
@@ -141,7 +141,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_category"
+            android:id="@+id/tv_category_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/corbel"
@@ -161,7 +161,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/tv_category" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_category_info" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_mood"
