--- a/app/src/main/res/menu/menu_sorting.xml
+++ b/app/src/main/res/menu/menu_sorting.xml
@@ -3,20 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/sort_by_title" android:checkableBehavior="single">
         <item
-            android:id="@+id/menu_sort_by_title_asc"
-            android:title="@string/menu_sort_by_title_asc"
-            app:showAsAction="collapseActionView" />
-        <item
-            android:id="@+id/menu_sort_by_title_desc"
-            android:title="@string/menu_sort_by_title_desc"
+            android:id="@+id/menu_sort_by_date_desc"
+            android:title="@string/menu_sort_by_date_desc"
+            android:checked="true"
             app:showAsAction="collapseActionView" />
         <item
             android:id="@+id/menu_sort_by_date_asc"
             android:title="@string/menu_sort_by_date_asc"
             app:showAsAction="collapseActionView" />
         <item
-            android:id="@+id/menu_sort_by_date_desc"
-            android:title="@string/menu_sort_by_date_desc"
+            android:id="@+id/menu_sort_by_title_asc"
+            android:title="@string/menu_sort_by_title_asc"
+            app:showAsAction="collapseActionView" />
+        <item
+            android:id="@+id/menu_sort_by_title_desc"
+            android:title="@string/menu_sort_by_title_desc"
             app:showAsAction="collapseActionView" />
     </group>
 </menu>
