--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -67,7 +67,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/text_view_bottom_line"
-                android:drawableStart="@drawable/ic_headphone"
+                android:drawableStart="@drawable/ic_display_setting"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/corbel_bold"
                 android:paddingVertical="10dp"
@@ -119,7 +119,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/text_view_bottom_line"
-                android:drawableStart="@drawable/ic_headphone"
+                android:drawableStart="@drawable/ic_info"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/corbel_bold"
                 android:paddingVertical="10dp"
