--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -61,4 +61,15 @@
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         tools:listitem="@layout/item_category" />
 
+    <include
+        android:id="@+id/empty_container"
+        layout="@layout/layout_empty_result"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_bar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
