--- a/app/src/main/res/layout/fragment_user_submission.xml
+++ b/app/src/main/res/layout/fragment_user_submission.xml
@@ -59,6 +59,17 @@
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         tools:listitem="@layout/item_song_horizontal_small" />
 
+    <include
+        android:id="@+id/empty_container"
+        layout="@layout/layout_empty_result"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_bar" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_submission"
         android:layout_width="wrap_content"
