--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,6 +79,7 @@
             android:id="@+id/rv_latest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
             android:paddingHorizontal="8dp"
@@ -108,6 +109,7 @@
             android:id="@+id/rv_most_viewed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:clipToPadding="false"
             android:isScrollContainer="false"
             android:overScrollMode="never"
